gitops/apps/zip-hider/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zip-hider
  namespace: zip-hider
spec:
  type: ClusterIP
  selector:
    app: zip-hider
  ports:
    - name: http
      port: 80
      targetPort: 80
