gitops/apps/zip-hider/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zip-hider
  namespace: zip-hider
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik
      namespace: gateway-system
  hostnames:
    - "zip-hider.ismola.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: zip-hider
          port: 80
          weight: 1
